公告跳转 + logo跳转

--- a/src/components/Header/Header.html
+++ b/src/components/Header/Header.html
@@ -559,10 +559,10 @@
               <!--logo begin-->
               <!-- <router-link to="/index/homePage" class="index-header-logo"><img src="../../assets/logo.png" class="header-logo"> -->
               <div class="baobao-logo">
-                <router-link :to="{name:'home'}" @click.native="reFresh()" class="index-header-logo">
+                <div @click="reFresh()" class="index-header-logo">
                   <img src="../../assets/indexHeader/2020_web_logo@2x.png" class="navigation-logo" v-show="lang==='CH'">
                   <img src="../../assets/indexHeader/2020_web_logo@2x.png" class="navigation-logo" v-show="lang!=='CH'">
-                </router-link>
+                </div>
               </div>
               <!--logo end-->
 
