添加银行卡信息

--- a/src/components/PaymentSet/PaymentSet.html
+++ b/src/components/PaymentSet/PaymentSet.html
@@ -427,8 +427,8 @@
                 <el-option
                   v-for="item in bankSelectList"
                   :key="item.value"
-                  :label="item.chineseName"
-                  :value="item.chineseName"
+                  :label="item.cnName"
+                  :value="item.cnName"
                   :change="clickSelectBankName"
                   >
                 </el-option>
