银行卡列表加划动

--- a/src/components/PaymentSet/PaymentSe.css
+++ b/src/components/PaymentSet/PaymentSe.css
@@ -556,6 +556,11 @@
   box-sizing: border-box;
 }
 
+.input-item-input-container >>> .dropdown-menu {
+  max-height: 320px !important;
+  overflow:scroll !important;
+}
+
 .input-item-input-container >>> .dropdown-toggle .vs__selected-options {
   height: 40px;
   padding: 0;
