修改活动名称

--- a/src/components/Header/Header.html
+++ b/src/components/Header/Header.html
@@ -767,7 +767,7 @@
                         class="navigation-item-hidden-list-item-router"
                         active-class="item_selected">
                         <!--KK交易挖矿活动-->
-                        {{$t('量化报名')}}
+                        {{$t('KK交易挖矿')}}
                       </div>
                     </li>
 
@@ -777,7 +777,7 @@
                         @click="goToOfficialQuantitativeDetails"
                         class="navigation-item-hidden-list-item-router"
                         active-class="item_selected">
-                        {{$t('量化详情')}}
+                        {{$t('KK交易挖矿详情')}}
                       </div>
                     </li>
 
