修改订单详情信息

--- a/src/components/Order/Order.less
+++ b/src/components/Order/Order.less
@@ -91,7 +91,7 @@
 	border: 0;
 	height: 25px;
 	line-height: 25px;
-	background: #C43E4E;
+	background: #3576F5;
 	border-bottom-right-radius: 5px;
 	border-top-right-radius: 5px;
 	padding: 0px 15px;
