购买出售交易声明添加第8条

--- a/src/components/Transaction/Transaction.html
+++ b/src/components/Transaction/Transaction.html
@@ -93,7 +93,8 @@
       4. 超过15分钟，如未点击“确认已付款”，系统视为无效订单，会自动撤销订单；<br/>
       5. 下单买入后冒充已付款，卖方可申诉举报，一经查实将禁封交易；<br/>
       6. 17:00以后及非工作日时间，每笔请拆分5万以内进行转账，否则将延迟到账；<br/>
-      7. 已取消订单，如已付款，请及时申诉，上传付款证明等资料，说明情况。
+      7. 已取消订单，如已付款，请及时申诉，上传付款证明等资料，说明情况；<br/>
+      8. 请使用与2020平台实名信息一致的用户名进行付款，否则商家将不予放行。
     </div>
 
   </div>
