添加区块恋活动入口

--- a/src/components/Header/Header.html
+++ b/src/components/Header/Header.html
@@ -803,7 +803,7 @@
                     'navigation-item-hidden-list-black':isBlack}"
                   >
 
-                    <!-- sss 量化报名-->
+                    <!--区块恋-->
                     <li class="navigation-item-hidden-list-item">
                       <div
                         @click="goToRecord"
@@ -813,7 +813,16 @@
                         {{$t('百日庆之百宝箱')}}
                       </div>
                     </li>
-
+                    <!-- 区块恋报名-->
+                    <li class="navigation-item-hidden-list-item">
+                      <div
+                        @click="goToBlockChain"
+                        class="navigation-item-hidden-list-item-router"
+                        active-class="item_selected">
+                        <!--区块恋活动-->
+                        {{$t('区块恋')}}
+                      </div>
+                    </li>
                   </ul>
                   <!--隐藏的标签 end-->
                 </li>
