顶部添加hot图片

--- a/src/components/Header/Header.html
+++ b/src/components/Header/Header.html
@@ -795,6 +795,7 @@
                     active-class="navigation-item-router-selected text_blue"
                   >
                     <span class="langfont-treasure">{{$t('活动')}}</span>
+                    <img src="../../assets/hot_icon.png" alt="" class="hot-icon">
                     <div class="language-jt-down" :class="chest?'language-jt-down':'language-jt-up'"></div>
                   </div>
                   <!--隐藏的标签 begin-->
