--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3436,6 +3436,13 @@
   color: rgba(255,255,255,1) ;
 }
 
+.hot-icon {
+  width: 18px;
+  position: absolute;
+  top: 8px;
+  left: 46px;
+}
+
 .navigation-item-container-right:hover .navigation-item-router {
   /*background: #12141d;*/
   color: rgba(255,255,255,1);
