添加镜像交易

--- a/src/components/Header/Header.html
+++ b/src/components/Header/Header.html
@@ -835,6 +835,21 @@
                   <!--隐藏的标签 end-->
                 </li>
                 <!--sss拼团 end-->
+                <!--sss镜像交易 begin-->
+                <li class="navigation-item-container flex">
+
+                  <!--                  :to="{name: 'assembleARegiment'}"-->
+                  <div
+                    @click="goToFollowTrade"
+                    class="navigation-item-router flex"
+                    active-class="navigation-item-router-selected"
+                  >{{$t('镜像交易')}}
+                    <!--                                      {{$t('currencyQuotation')}}-->
+                  </div>
+                  <!--隐藏的标签 法币交易 begin-->
+                  <!--隐藏的标签 end-->
+                </li>
+                <!--sss镜像交易 end-->
 
 
               </ul>
