--- a/src/components/Header/Header.html
+++ b/src/components/Header/Header.html
@@ -900,6 +900,15 @@
                       </div>
                     </li>
 
+                    <!--  合约账户  begin-->
+                    <li class="navigation-item-hidden-list-item">
+                      <div @click="goToContractAsset"
+                           class="navigation-item-hidden-list-item-router"
+                           active-class="item_selected">
+                        {{$t('合约账户')}}
+                      </div>
+                    </li>
+                    <!-- 合约账户 end-->
                     <!--  法币账户  begin-->
                     <li class="navigation-item-hidden-list-item">
                       <div @click="goToLegalCurrency"
@@ -911,16 +920,7 @@
 
                     <!-- 法币账户 end-->
 
-                    <!--  法币账户  begin-->
-                    <li class="navigation-item-hidden-list-item">
-                      <div @click="goToContractAsset"
-                           class="navigation-item-hidden-list-item-router"
-                           active-class="item_selected">
-                        {{$t('合约账户')}}
-                      </div>
-                    </li>
 
-                    <!-- 法币账户 end-->
 
                     <!--                    币币账户 暂时屏蔽 bebgin-->
                     <!--                    <li class="navigation-item-hidden-list-item">-->
@@ -1035,6 +1035,14 @@
                       </div>
                     </li>
                     <li class="navigation-item-hidden-list-item">
+                      <div
+                        @click="goToContractOrders"
+                        class="navigation-item-hidden-list-item-router"
+                        active-class="item_selected">
+                        {{$t('合约订单')}}
+                      </div>
+                    </li>
+                    <li class="navigation-item-hidden-list-item">
                       <router-link
                         :to="{name:'OrderConduct'}"
                         class="navigation-item-hidden-list-item-router"
@@ -1043,14 +1051,7 @@
                         {{$t('法币订单')}}
                       </router-link>
                     </li>
-                    <li class="navigation-item-hidden-list-item">
-                      <div
-                        @click="goToContractOrders"
-                        class="navigation-item-hidden-list-item-router"
-                        active-class="item_selected">
-                        {{$t('合约订单')}}
-                      </div>
-                    </li>
+
                   </ul>
                   <!--隐藏的标签 end-->
                 </li>
