--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3440,7 +3440,7 @@
   width: 18px;
   position: absolute;
   top: 8px;
-  left: 46px;
+  /*left: 46px;*/
 }
 
 .navigation-item-container-right:hover .navigation-item-router {
